--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,6 +7,7 @@ platforms:
     pre_build_image: true
     privileged: true
     command: ""
+    # platform: linux/amd64
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
     cgroupns_mode: host
