--- a/roles/asdf/meta/main.yml
+++ b/roles/asdf/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: AnhQuanTrl
-  role_name: chezmoi
+  role_name: asdf
   description: Manage installation of Chezmoi (dotfiles manager).
   company: none
 
